force-app/main/default/objects/Apex_PE_Framework__mdt/Apex_PE_Framework__mdt.object-meta.xml
<CustomObject>
    <description>This Custom Metadata hold configurable changes related to Platform Event Trigger handlers and Batch Classes</description>
    <label>Apex PE Framework</label>
    <pluralLabel>Apex PE Frameworks</pluralLabel>
</CustomObject>