force-app/main/default/objects/Apex_PE_Framework__mdt/fields/ApexClassName__c.field-meta.xml
<CustomField>
    <fullName>ApexClassName__c</fullName>
    <label>ApexClassName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>