force-app/main/default/objects/Apex_PE_Framework__mdt/fields/BatchClassChunkSize__c.field-meta.xml
<CustomField>
    <fullName>BatchClassChunkSize__c</fullName>
    <label>BatchClassChunkSize</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>