force-app/main/default/objects/Apex_PE_Framework__mdt/fields/RetryInterval__c.field-meta.xml
<CustomField>
    <fullName>RetryInterval__c</fullName>
    <label>RetryInterval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>