force-app/main/default/objects/Apex_PE_Framework__mdt/fields/TriggerBatchSize__c.field-meta.xml
<CustomField>
    <fullName>TriggerBatchSize__c</fullName>
    <label>TriggerBatchSize</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>