force-app/main/default/objects/Apex_PE_Framework__mdt/fields/TriggerEnabled__c.field-meta.xml
<CustomField>
    <fullName>TriggerEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TriggerEnabled</label>
    <type>Checkbox</type>
</CustomField>